--- a/Java Training/Spring Boot/springbootdemo/pom.xml
+++ b/Java Training/Spring Boot/springbootdemo/pom.xml
@@ -42,6 +42,13 @@
 			<version>8.0.26</version>
 		</dependency>
 
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>3.7.0</version>
+		</dependency>
+
+
 
 	</dependencies>
 
