--- a/Java Training/Spring Boot/springbootdemo/pom.xml
+++ b/Java Training/Spring Boot/springbootdemo/pom.xml
@@ -48,7 +48,11 @@
 			<version>3.7.0</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+			<version>2.5.4</version>
+		</dependency>
 
 	</dependencies>
 
